--- a/tasks/upload-injected-pasw/task.yml
+++ b/tasks/upload-injected-pasw/task.yml
@@ -19,8 +19,8 @@ params:
   OM_IP:
 
 inputs:
-  - name: pcf-pipelines
+  - name: pasw-automation
   - name: pasw-injected
 
 run:
-  path: pcf-pipelines/deploy-pasw/tasks/upload-injected-pasw/task.sh
+  path: pasw-automation/tasks/upload-injected-pasw/task.sh
